--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -40,3 +39,6 @@ keys.json
 
 # typescript
 .tsbuildinfo
+
+# JetBrains
+.idea
