--- a/package.json
+++ b/package.json
@@ -6,12 +6,25 @@
   "author": "The Archmage team",
   "scripts": {
     "dev": "plasmo dev",
-    "build": "plasmo build"
+    "build": "plasmo build",
+    "format": "prettier --write --loglevel warn \"./{pages,components,theme,hooks,utils,config}/**\""
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.1",
+    "@chakra-ui/theme-tools": "^2.0.2",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "dexie": "^3.2.2",
+    "dexie-react-hooks": "^1.1.1",
+    "eslint-config-next": "^12.2.1",
+    "eslint-config-prettier": "^8.5.0",
+    "ethers": "^5.6.9",
+    "framer-motion": "^6.4.2",
     "plasmo": "0.45.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.3.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
