--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "plasmo": "0.45.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "swr": "^1.3.0"
   },
