--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
-    "format": "prettier --write --loglevel warn \"./{pages,components,theme,hooks,utils,config}/**\""
+    "format": "prettier --write --loglevel warn \"./{pages,components,theme,lib,hooks,utils,config}/**\"",
+    "i18n:extract": "NODE_ENV=development lingui extract --clean --overwrite --locale en",
+    "i18n:compile": "lingui compile",
+    "i18n": "pnpm i18n:extract && pnpm i18n:compile"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.1",
@@ -20,19 +23,31 @@
     "eslint-config-prettier": "^8.5.0",
     "ethers": "^5.6.9",
     "framer-motion": "^6.4.2",
+    "jotai": "^1.7.4",
+    "make-plural": "^7.1.0",
     "plasmo": "0.45.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "swr": "^1.3.0"
+    "react-use": "^17.4.0",
+    "swr": "^1.3.0",
+    "webextension-polyfill": "^0.9.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@chakra-ui/system": "^2.1.3",
+    "@lingui/cli": "^3.14.0",
+    "@lingui/core": "^3.13.0",
+    "@lingui/macro": "^3.14.0",
+    "@lingui/react": "^3.14.0",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/chrome": "0.0.191",
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "babel-plugin-macros": "^3.1.0",
+    "eslint": ">=7.23.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0",
     "prettier": "2.7.1",
     "typescript": "4.7.4"
   },
@@ -40,5 +55,10 @@
     "host_permissions": [
       "https://*/*"
     ]
+  },
+  "peerDependencies": {
+    "@chakra-ui/system": "^2.1.3",
+    "@lingui/core": "^3.13.0",
+    "eslint": ">=7.23.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0"
   }
 }
