--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "dependencies": {
     "@chakra-ui/react": "^2.2.1",
     "@chakra-ui/theme-tools": "^2.0.2",
+    "@cosmjs/crypto": "^0.28.10",
+    "@cosmjs/proto-signing": "^0.28.10",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@ethersproject/json-wallets": "^5.6.1",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
+    "ed25519-hd-key": "^1.2.0",
     "eslint-config-next": "^12.2.1",
     "eslint-config-prettier": "^8.5.0",
     "ethers": "^5.6.9",
@@ -32,6 +36,7 @@
     "react-router-dom": "^6.3.0",
     "react-use": "^17.4.0",
     "swr": "^1.3.0",
+    "unique-names-generator": "^4.7.1",
     "webextension-polyfill": "^0.9.0"
   },
   "devDependencies": {
@@ -46,6 +51,7 @@
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/webextension-polyfill": "^0.9.0",
     "babel-plugin-macros": "^3.1.0",
     "eslint": ">=7.23.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0",
     "prettier": "2.7.1",
