Add crypto ed25519

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "./**/*.tsx"
   ],
   "compilerOptions": {
-    "strict": true,
+    "strict": false,
+    "importsNotUsedAsValues": "remove",
     "paths": {
       "~*": [
         "./*"
