--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
+    "test": "jest",
     "format": "prettier --write --loglevel warn \"./{pages,components,theme,lib,hooks,utils,config}/**\"",
     "i18n:extract": "NODE_ENV=development lingui extract --clean --overwrite --locale en",
     "i18n:compile": "lingui compile",
@@ -19,7 +20,18 @@
     "@cosmjs/proto-signing": "^0.28.10",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@ethersproject/bignumber": "^5.6.2",
+    "@ethersproject/bytes": "^5.6.1",
+    "@ethersproject/hdnode": "^5.6.2",
     "@ethersproject/json-wallets": "^5.6.1",
+    "@ethersproject/properties": "^5.6.0",
+    "@ethersproject/sha2": "^5.6.1",
+    "@ethersproject/signing-key": "^5.6.2",
+    "@ethersproject/transactions": "^5.6.2",
+    "@ethersproject/wordlists": "^5.6.1",
+    "@solana/web3.js": "^1.47.3",
+    "aptos": "^1.2.0",
+    "bs58": "^5.0.0",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
     "ed25519-hd-key": "^1.2.0",
@@ -28,6 +40,7 @@
     "ethers": "^5.6.9",
     "framer-motion": "^6.4.2",
     "jotai": "^1.7.4",
+    "js-sha3": "^0.8.0",
     "make-plural": "^7.1.0",
     "plasmo": "0.45.2",
     "react": "18.2.0",
@@ -36,6 +49,7 @@
     "react-router-dom": "^6.3.0",
     "react-use": "^17.4.0",
     "swr": "^1.3.0",
+    "tweetnacl": "^1.0.3",
     "unique-names-generator": "^4.7.1",
     "webextension-polyfill": "^0.9.0"
   },
@@ -48,13 +62,17 @@
     "@lingui/react": "^3.14.0",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/chrome": "0.0.191",
+    "@types/jest": "^28.1.4",
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/webextension-polyfill": "^0.9.0",
     "babel-plugin-macros": "^3.1.0",
     "eslint": ">=7.23.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0",
+    "jest": "^28.1.2",
+    "jest-webextension-mock": "^3.7.22",
     "prettier": "2.7.1",
+    "ts-jest": "^28.0.5",
     "typescript": "4.7.4"
   },
   "manifest": {
