--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ethersproject/signing-key": "^5.6.2",
     "@ethersproject/transactions": "^5.6.2",
     "@ethersproject/wordlists": "^5.6.1",
+    "@mysten/sui.js": "^0.6.0",
     "@solana/web3.js": "^1.47.3",
     "aptos": "^1.2.0",
     "bs58": "^5.0.0",
