--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18n": "pnpm i18n:extract && pnpm i18n:compile"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/react": "^2.2.1",
     "@chakra-ui/theme-tools": "^2.0.2",
     "@cosmjs/crypto": "^0.28.10",
@@ -32,7 +33,10 @@
     "@mysten/sui.js": "^0.6.0",
     "@solana/web3.js": "^1.47.3",
     "aptos": "^1.2.0",
+    "assert": "^2.0.0",
     "bs58": "^5.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
     "ed25519-hd-key": "^1.2.0",
@@ -43,16 +47,20 @@
     "jotai": "^1.7.4",
     "js-sha3": "^0.8.0",
     "make-plural": "^7.1.0",
+    "path-browserify": "^1.0.1",
     "plasmo": "0.45.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-use": "^17.4.0",
+    "react-use-wizard": "^2.2.1",
+    "stream-browserify": "^3.0.0",
     "swr": "^1.3.0",
     "tweetnacl": "^1.0.3",
     "unique-names-generator": "^4.7.1",
-    "webextension-polyfill": "^0.9.0"
+    "webextension-polyfill": "^0.9.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -79,6 +87,9 @@
   "manifest": {
     "host_permissions": [
       "https://*/*"
+    ],
+    "permissions": [
+      "tabs"
     ]
   },
   "peerDependencies": {
