--- a/package.json
+++ b/package.json
@@ -96,5 +96,9 @@
     "@chakra-ui/system": "^2.1.3",
     "@lingui/core": "^3.13.0",
     "eslint": ">=7.23.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0"
+  },
+  "resolutions": {
+    "libsodium": "file:./noop",
+    "libsodium-wrappers": "file:./noop"
   }
 }
