--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@chakra-ui/theme-tools": "^2.0.2",
     "@cosmjs/crypto": "^0.28.10",
     "@cosmjs/proto-signing": "^0.28.10",
+    "@ctrl/tinycolor": "^3.4.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@ethersproject/bignumber": "^5.6.2",
@@ -26,12 +27,17 @@
     "@ethersproject/hdnode": "^5.6.2",
     "@ethersproject/json-wallets": "^5.6.1",
     "@ethersproject/properties": "^5.6.0",
+    "@ethersproject/random": "^5.6.1",
     "@ethersproject/sha2": "^5.6.1",
     "@ethersproject/signing-key": "^5.6.2",
     "@ethersproject/transactions": "^5.6.2",
     "@ethersproject/wordlists": "^5.6.1",
     "@mysten/sui.js": "^0.6.0",
+    "@plasmohq/storage": "^0.8.1",
     "@solana/web3.js": "^1.47.3",
+    "@zxcvbn-ts/core": "^2.0.3",
+    "@zxcvbn-ts/language-common": "^2.0.1",
+    "@zxcvbn-ts/language-en": "^2.0.1",
     "aptos": "^1.2.0",
     "assert": "^2.0.0",
     "bs58": "^5.0.0",
@@ -59,8 +65,7 @@
     "swr": "^1.3.0",
     "tweetnacl": "^1.0.3",
     "unique-names-generator": "^4.7.1",
-    "webextension-polyfill": "^0.9.0",
-    "zxcvbn": "^4.4.2"
+    "webextension-polyfill": "^0.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
