--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
+    "react-select": "^5.4.0",
     "react-use": "^17.4.0",
     "react-use-wizard": "^2.2.1",
     "stream-browserify": "^3.0.0",
