--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "react-select": "^5.4.0",
     "react-use": "^17.4.0",
     "react-use-wizard": "^2.2.1",
-    "stream-browserify": "^3.0.0",
+    "readable-stream": "^4.1.0",
+    "string_decoder": "^1.3.0",
     "swr": "^1.3.0",
     "tweetnacl": "^1.0.3",
     "unique-names-generator": "^4.7.1",
@@ -104,7 +105,11 @@
     "eslint": ">=7.23.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0"
   },
   "resolutions": {
-    "libsodium": "file:./noop",
-    "libsodium-wrappers": "file:./noop"
+    "libsodium": "file:./resolutions/noop",
+    "libsodium-wrappers": "file:./resolutions/noop",
+    "readable-stream": "^4.1.0"
+  },
+  "alias": {
+    "stream": "./resolutions/stream.js"
   }
 }
