--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@mysten/sui.js": "^0.6.0",
     "@plasmohq/storage": "^0.8.1",
     "@solana/web3.js": "^1.47.3",
+    "@tanstack/react-query": "^4.0.10",
+    "@tanstack/react-query-persist-client": "^4.0.10",
+    "@tanstack/react-virtual": "3.0.0-beta.17",
     "@zxcvbn-ts/core": "^2.0.3",
     "@zxcvbn-ts/language-common": "^2.0.1",
     "@zxcvbn-ts/language-en": "^2.0.1",
