--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "path-browserify": "^1.0.1",
     "plasmo": "0.45.2",
     "react": "18.2.0",
+    "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
