--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@zxcvbn-ts/language-en": "^2.0.1",
     "aptos": "^1.2.0",
     "assert": "^2.0.0",
+    "avvvatars-react": "^0.4.2",
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
@@ -103,7 +104,8 @@
     ],
     "permissions": [
       "tabs",
-      "scripting"
+      "scripting",
+      "alarms"
     ]
   },
   "peerDependencies": {
