Draft networks setting 1

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@ethersproject/signing-key": "^5.6.2",
     "@ethersproject/transactions": "^5.6.2",
     "@ethersproject/wordlists": "^5.6.1",
+    "@keplr-wallet/cosmos": "^0.10.15",
+    "@keplr-wallet/types": "^0.10.15",
     "@mysten/sui.js": "^0.6.0",
     "@plasmohq/storage": "^0.8.1",
     "@solana/web3.js": "^1.47.3",
@@ -60,7 +62,7 @@
     "js-sha3": "^0.8.0",
     "make-plural": "^7.1.0",
     "path-browserify": "^1.0.1",
-    "plasmo": "0.45.2",
+    "plasmo": "0.50.1",
     "react": "18.2.0",
     "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
