--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "path-browserify": "^1.0.1",
     "plasmo": "0.50.1",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -90,6 +91,7 @@
     "@types/jest": "^28.1.4",
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.5",
     "@types/webextension-polyfill": "^0.9.0",
     "babel-plugin-macros": "^3.1.0",
