--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jotai": "^1.7.4",
     "js-sha3": "^0.8.0",
     "make-plural": "^7.1.0",
+    "p-queue": "6.6.2",
     "path-browserify": "^1.0.1",
     "plasmo": "0.50.1",
     "react": "18.2.0",
