--- a/package.json
+++ b/package.json
@@ -27,18 +27,22 @@
     "@ethersproject/bytes": "^5.6.1",
     "@ethersproject/hdnode": "^5.6.2",
     "@ethersproject/json-wallets": "^5.6.1",
+    "@ethersproject/logger": "^5.6.0",
+    "@ethersproject/networks": "^5.6.4",
     "@ethersproject/properties": "^5.6.0",
     "@ethersproject/providers": "^5.6.8",
     "@ethersproject/random": "^5.6.1",
     "@ethersproject/sha2": "^5.6.1",
     "@ethersproject/signing-key": "^5.6.2",
     "@ethersproject/transactions": "^5.6.2",
+    "@ethersproject/web": "^5.6.1",
     "@ethersproject/wordlists": "^5.6.1",
     "@keplr-wallet/cosmos": "^0.10.15",
     "@keplr-wallet/types": "^0.10.15",
     "@mysten/sui.js": "^0.6.0",
     "@plasmohq/storage": "^0.8.1",
     "@solana/web3.js": "^1.47.3",
+    "@tanstack/query-core": "^4.1.3",
     "@tanstack/react-query": "^4.0.10",
     "@tanstack/react-query-persist-client": "^4.0.10",
     "@tanstack/react-virtual": "3.0.0-beta.17",
@@ -52,6 +56,7 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.4",
+    "decimal.js": "^10.4.0",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
     "ed25519-hd-key": "^1.2.0",
