--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ed25519-hd-key": "^1.2.0",
     "eslint-config-next": "^12.2.1",
     "eslint-config-prettier": "^8.5.0",
+    "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.9",
     "framer-motion": "^6.4.2",
     "jotai": "^1.7.4",
