--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "eth-balance-checker": "^0.2.0",
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.9",
-    "framer-motion": "^6.4.2",
+    "framer-motion": "^7.2.1",
     "jotai": "^1.7.4",
     "js-sha3": "^0.8.0",
     "make-plural": "^7.1.0",
@@ -79,6 +79,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.4.0",
+    "react-spinners": "^0.13.4",
     "react-use": "^17.4.0",
     "react-use-wizard": "^2.2.1",
     "readable-stream": "^4.1.0",
