--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ctrl/tinycolor": "^3.4.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@ethersproject/abstract-provider": "^5.7.0",
     "@ethersproject/abstract-signer": "^5.6.2",
     "@ethersproject/bignumber": "^5.6.2",
     "@ethersproject/bytes": "^5.6.1",
