--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@zxcvbn-ts/language-common": "^2.0.1",
     "@zxcvbn-ts/language-en": "^2.0.1",
     "ajv": "^8.11.0",
+    "ajv-formats": "^2.1.1",
     "aptos": "^1.2.0",
     "assert": "^2.0.0",
     "avvvatars-react": "^0.4.2",
