--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write --loglevel warn \"./{pages,components,theme,lib,hooks,utils,config}/**\"",
     "i18n:extract": "NODE_ENV=development lingui extract --clean --overwrite --locale en",
     "i18n:compile": "lingui compile",
-    "i18n": "pnpm i18n:extract && pnpm i18n:compile"
+    "i18n": "pnpm i18n:extract && pnpm i18n:compile",
+    "typechain": "./scripts/typechain.sh",
+    "ajv": "./scripts/ajv.sh"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.4",
@@ -22,6 +24,7 @@
     "@ctrl/tinycolor": "^3.4.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@ethersproject/abi": "^5.7.0",
     "@ethersproject/abstract-provider": "^5.7.0",
     "@ethersproject/abstract-signer": "^5.6.2",
     "@ethersproject/bignumber": "^5.6.2",
@@ -42,6 +45,7 @@
     "@keplr-wallet/cosmos": "^0.10.15",
     "@keplr-wallet/types": "^0.10.15",
     "@mysten/sui.js": "^0.6.0",
+    "@openzeppelin/contracts": "^4.7.3",
     "@plasmohq/storage": "^0.8.1",
     "@solana/web3.js": "^1.47.3",
     "@tanstack/query-core": "^4.1.3",
@@ -102,6 +106,7 @@
     "@lingui/macro": "^3.14.0",
     "@lingui/react": "^3.14.0",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
+    "@typechain/ethers-v5": "^10.1.0",
     "@types/chrome": "0.0.191",
     "@types/jest": "^28.1.4",
     "@types/node": "18.0.1",
@@ -110,12 +115,14 @@
     "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "18.0.5",
     "@types/webextension-polyfill": "^0.9.0",
+    "ajv-cli": "^5.0.0",
     "babel-plugin-macros": "^3.1.0",
     "eslint": ">=7.23.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0",
     "jest": "^28.1.2",
     "jest-webextension-mock": "^3.7.22",
     "prettier": "2.7.1",
     "ts-jest": "^28.0.5",
+    "typechain": "^8.1.0",
     "typescript": "4.7.4"
   },
   "manifest": {
