--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "p-queue": "6.6.2",
     "path-browserify": "^1.0.1",
     "plasmo": "0.50.1",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-blockies": "^1.4.1",
