--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-use": "^17.4.0",
     "react-use-wizard": "^2.2.1",
     "readable-stream": "^4.1.0",
+    "stable-hash": "^0.0.2",
     "string_decoder": "^1.3.0",
     "swr": "^1.3.0",
     "tweetnacl": "^1.0.3",
