--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ethersproject/abstract-signer": "^5.6.2",
     "@ethersproject/bignumber": "^5.6.2",
     "@ethersproject/bytes": "^5.6.1",
+    "@ethersproject/constants": "^5.7.0",
     "@ethersproject/hdnode": "^5.6.2",
     "@ethersproject/json-wallets": "^5.6.1",
     "@ethersproject/logger": "^5.6.0",
