--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/abstract-provider": "^5.7.0",
     "@ethersproject/abstract-signer": "^5.6.2",
+    "@ethersproject/address": "^5.7.0",
     "@ethersproject/bignumber": "^5.6.2",
     "@ethersproject/bytes": "^5.6.1",
     "@ethersproject/constants": "^5.7.0",
+    "@ethersproject/hash": "^5.7.0",
     "@ethersproject/hdnode": "^5.6.2",
     "@ethersproject/json-wallets": "^5.6.1",
+    "@ethersproject/keccak256": "^5.7.0",
     "@ethersproject/logger": "^5.6.0",
     "@ethersproject/networks": "^5.6.4",
     "@ethersproject/properties": "^5.6.0",
@@ -89,6 +92,7 @@
     "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-json-view": "^1.21.3",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.4.0",
     "react-spinners": "^0.13.4",
