--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "archmage-x",
-  "displayName": "Archmage X",
+  "displayName": "Archmage",
   "version": "0.0.0",
   "description": "The Archmage browser extension",
   "author": "The Archmage team",
