--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "archmage-x",
   "displayName": "Archmage",
-  "version": "0.0.0",
+  "version": "1.0.0-beta.0",
   "description": "The Archmage browser extension",
   "author": "The Archmage team",
   "scripts": {
@@ -134,6 +134,8 @@
     "typescript": "4.7.4"
   },
   "manifest": {
+    "version": "1.0.0",
+    "version_name": "1.0.0-beta.0",
     "host_permissions": [
       "<all_urls>"
     ],
