--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "eslint": ">=7.23.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0"
   },
   "resolutions": {
+    "@parcel/source-map": "2.1.0",
     "libsodium": "file:./resolutions/noop",
     "libsodium-wrappers": "file:./resolutions/noop",
     "readable-stream": "^4.1.0",
