--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-router-dom": "^6.3.0",
     "react-select": "^5.4.0",
     "react-spinners": "^0.13.4",
+    "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.4.0",
     "react-use-wizard": "^2.2.1",
     "readable-stream": "^4.1.0",
@@ -122,6 +123,7 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "18.0.5",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "@types/webextension-polyfill": "^0.9.0",
     "ajv-cli": "^5.0.0",
     "babel-plugin-macros": "^3.1.0",
@@ -160,6 +162,7 @@
     "eslint": ">=7.23.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0"
   },
   "resolutions": {
+    "@parcel/source-map": "2.1.0",
     "libsodium": "file:./resolutions/noop",
     "libsodium-wrappers": "file:./resolutions/noop",
     "readable-stream": "^4.1.0",
