Draft aptos provider

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
   ],
   "compilerOptions": {
     "strict": true,
+    "experimentalDecorators": true,
     "importsNotUsedAsValues": "remove",
     "paths": {
       "~*": [
