--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "aptos": "^1.3.15",
     "assert": "^2.0.0",
     "avvvatars-react": "^0.4.2",
+    "axios": "^1.1.2",
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
