--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "@tanstack/react-virtual": "3.0.0-beta.18",
     "@uniswap/token-lists": "1.0.0-beta.30",
     "@vespaiach/axios-fetch-adapter": "^0.3.1",
+    "@walletconnect/client": "^1.8.0",
+    "@walletconnect/web3-provider": "^1.8.0",
     "@zxcvbn-ts/core": "^2.0.3",
     "@zxcvbn-ts/language-common": "^2.0.1",
     "@zxcvbn-ts/language-en": "^2.0.1",
@@ -88,13 +90,16 @@
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.9",
     "framer-motion": "^7.2.1",
+    "https-browserify": "^1.0.0",
     "jotai": "^1.7.4",
     "js-sha3": "^0.8.0",
     "make-plural": "^7.1.0",
+    "os-browserify": "^0.3.0",
     "p-queue": "6.6.2",
     "path-browserify": "^1.0.1",
     "plasmo": "0.56.0",
     "qrcode.react": "^3.1.0",
+    "querystring-es3": "^0.2.1",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-blockies": "^1.4.1",
@@ -109,10 +114,12 @@
     "react-use-wizard": "^2.2.1",
     "readable-stream": "^4.1.0",
     "stable-hash": "^0.0.2",
+    "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
     "swr": "^1.3.0",
     "tweetnacl": "^1.0.3",
     "unique-names-generator": "^4.7.1",
+    "url": "^0.11.0",
     "webextension-polyfill": "^0.9.0"
   },
   "devDependencies": {
@@ -133,6 +140,7 @@
     "@types/react-dom": "18.0.5",
     "@types/react-syntax-highlighter": "^15.5.5",
     "@types/webextension-polyfill": "^0.9.0",
+    "@walletconnect/types": "1.8.0",
     "ajv-cli": "^5.0.0",
     "babel-plugin-macros": "^3.1.0",
     "eslint": ">=7.23.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0",
