Draft support sui chain

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@ledgerhq/hw-transport-web-ble": "^6.27.6",
     "@ledgerhq/hw-transport-webhid": "^6.27.6",
     "@ledgerhq/logs": "^6.10.1",
-    "@mysten/sui.js": "^0.6.0",
+    "@mysten/sui.js": "^0.14.0",
     "@openzeppelin/contracts": "^4.7.3",
     "@plasmohq/storage": "^0.8.1",
     "@solana/web3.js": "^1.47.3",
@@ -94,6 +94,7 @@
     "jotai": "^1.7.4",
     "js-sha3": "^0.8.0",
     "make-plural": "^7.1.0",
+    "mitt": "^3.0.0",
     "os-browserify": "^0.3.0",
     "p-queue": "6.6.2",
     "path-browserify": "^1.0.1",
