--- a/package.json
+++ b/package.json
@@ -55,6 +55,10 @@
     "@ledgerhq/hw-transport-web-ble": "^6.27.6",
     "@ledgerhq/hw-transport-webhid": "^6.27.6",
     "@ledgerhq/logs": "^6.10.1",
+    "@moralisweb3/api-utils": "^2.7.0",
+    "@moralisweb3/core": "^2.7.0",
+    "@moralisweb3/evm-api": "^2.7.0",
+    "@moralisweb3/evm-utils": "^2.7.0",
     "@mysten/sui.js": "^0.14.0",
     "@openzeppelin/contracts": "^4.7.3",
     "@plasmohq/storage": "^0.8.1",
@@ -72,6 +76,7 @@
     "@zxcvbn-ts/language-en": "^2.0.1",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
+    "alchemy-sdk": "^2.2.0",
     "aptos": "^1.3.15",
     "assert": "^2.0.0",
     "avvvatars-react": "^0.4.2",
