--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,5 @@
 PLASMO_PUBLIC_ENABLE_COSMOS=
+PLASMO_PUBLIC_ENABLE_STARKNET=
 PLASMO_PUBLIC_ENABLE_APTOS=true
+PLASMO_PUBLIC_ENABLE_SUI=
+PLASMO_PUBLIC_ENABLE_SOLANA=
