--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "react-use-wizard": "^2.2.1",
     "readable-stream": "^4.1.0",
     "stable-hash": "^0.0.2",
+    "starknet": "^4.9.0",
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
     "swr": "^1.3.0",
