--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+PLASMO_PUBLIC_VERSION=1.0.0-beta.4
 PLASMO_PUBLIC_ENABLE_EVM=true
-PLASMO_WALLET_CONNECT_PROJECT_ID=831ec6e7e2b7e00e09cf0ed3200cd6ce
+PLASMO_PUBLIC_WALLET_CONNECT_PROJECT_ID=831ec6e7e2b7e00e09cf0ed3200cd6ce
