--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "os-browserify": "^0.3.0",
     "p-queue": "6.6.2",
     "path-browserify": "^1.0.1",
-    "plasmo": "0.56.0",
+    "@archmagelive/plasmo": "0.56.0",
     "qrcode.react": "^3.1.0",
     "querystring-es3": "^0.2.1",
     "react": "18.2.0",
