--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ajv": "./scripts/ajv.sh"
   },
   "dependencies": {
+    "@archmagelive/plasmo": "0.56.0",
     "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/react": "^2.2.1",
     "@chakra-ui/theme-tools": "^2.0.2",
@@ -62,6 +63,7 @@
     "@mysten/sui.js": "^0.14.0",
     "@openzeppelin/contracts": "^4.7.3",
     "@plasmohq/storage": "^0.8.1",
+    "@react-icons/all-files": "https://github.com/react-icons/react-icons/releases/download/v4.6.0/react-icons-all-files-4.6.0.tgz",
     "@solana/web3.js": "^1.47.3",
     "@tanstack/query-core": "^4.13.4",
     "@tanstack/react-query": "^4.13.5",
@@ -103,14 +105,12 @@
     "os-browserify": "^0.3.0",
     "p-queue": "6.6.2",
     "path-browserify": "^1.0.1",
-    "@archmagelive/plasmo": "0.56.0",
     "qrcode.react": "^3.1.0",
     "querystring-es3": "^0.2.1",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
     "react-json-view": "^1.21.3",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.4.0",
