Draft support cosmos 1

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/react": "^2.2.1",
     "@chakra-ui/theme-tools": "^2.0.2",
-    "@cosmjs/crypto": "^0.28.10",
-    "@cosmjs/encoding": "^0.29.0",
-    "@cosmjs/proto-signing": "^0.28.10",
+    "@cosmjs/amino": "^0.29.5",
+    "@cosmjs/crypto": "^0.29.5",
+    "@cosmjs/encoding": "^0.29.5",
+    "@cosmjs/proto-signing": "^0.29.5",
+    "@cosmjs/stargate": "^0.29.5",
     "@ctrl/tinycolor": "^3.4.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -48,10 +50,12 @@
     "@ethersproject/transactions": "^5.6.2",
     "@ethersproject/web": "^5.6.1",
     "@ethersproject/wordlists": "^5.6.1",
-    "@keplr-wallet/cosmos": "^0.10.15",
-    "@keplr-wallet/types": "^0.10.15",
+    "@keplr-wallet/chain-validator": "^0.11.38",
+    "@keplr-wallet/common": "^0.11.38",
+    "@keplr-wallet/cosmos": "^0.11.38",
+    "@keplr-wallet/types": "^0.11.38",
     "@ledgerhq/devices": "^7.0.3",
-    "@ledgerhq/hw-app-cosmos": "^6.27.6",
+    "@ledgerhq/hw-app-cosmos": "^6.27.10",
     "@ledgerhq/hw-app-eth": "^6.29.10",
     "@ledgerhq/hw-transport-web-ble": "^6.27.6",
     "@ledgerhq/hw-transport-webhid": "^6.27.6",
@@ -85,6 +89,7 @@
     "axios": "^1.1.2",
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
+    "cosmjs-types": "^0.6.1",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.4",
     "decimal.js": "^10.4.0",
