--- a/resolutions/@cosmjs/crypto/package.json
+++ b/resolutions/@cosmjs/crypto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cosmjs/crypto",
-  "version": "0.28.11-merlion",
+  "version": "0.29.5",
   "description": "Cryptography resources for blockchain projects",
   "contributors": [
     "IOV SAS <admin@iov.one>",
@@ -41,20 +41,20 @@
     "pack-web": "yarn build-or-skip && webpack --mode development --config webpack.web.config.js"
   },
   "dependencies": {
-    "@cosmjs/encoding": "0.28.11",
-    "@cosmjs/math": "0.28.11",
-    "@cosmjs/utils": "0.28.11",
+    "@cosmjs/encoding": "^0.29.5",
+    "@cosmjs/math": "^0.29.5",
+    "@cosmjs/utils": "^0.29.5",
     "@noble/hashes": "^1",
     "bn.js": "^5.2.0",
-    "elliptic": "^6.5.3",
+    "elliptic": "^6.5.4",
     "libsodium-wrappers": "^0.7.6"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/bn.js": "^5",
-    "@types/elliptic": "^6.4.12",
+    "@types/elliptic": "^6.4.14",
     "@types/eslint-plugin-prettier": "^3",
-    "@types/jasmine": "^3.8",
+    "@types/jasmine": "^4",
     "@types/karma-firefox-launcher": "^2",
     "@types/karma-jasmine": "^4",
     "@types/karma-jasmine-html-reporter": "^1",
@@ -71,20 +71,20 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "esm": "^3.2.25",
     "glob": "^7.1.6",
-    "jasmine": "^3.99",
+    "jasmine": "^4",
     "jasmine-spec-reporter": "^6",
     "karma": "^6.3.14",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^2.1.0",
-    "karma-jasmine": "^4.0.1",
+    "karma-jasmine": "^5",
     "karma-jasmine-html-reporter": "^1.5.4",
     "nyc": "^15.1.0",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.1",
     "ses": "^0.11.0",
     "source-map-support": "^0.5.19",
     "ts-node": "^8",
     "typedoc": "^0.22",
-    "typescript": "~4.4",
+    "typescript": "~4.6",
     "webpack": "^5.32.0",
     "webpack-cli": "^4.6.0"
   }
