Draft support cosmos 2

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@cosmjs/encoding": "^0.29.5",
     "@cosmjs/proto-signing": "^0.29.5",
     "@cosmjs/stargate": "^0.29.5",
+    "@cosmjs/tendermint-rpc": "^0.29.5",
     "@ctrl/tinycolor": "^3.4.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -73,6 +74,7 @@
     "@tanstack/react-query": "^4.13.5",
     "@tanstack/react-query-persist-client": "^4.0.10",
     "@tanstack/react-virtual": "3.0.0-beta.18",
+    "@types/long": "^4.0.2",
     "@uniswap/token-lists": "1.0.0-beta.30",
     "@vespaiach/axios-fetch-adapter": "^0.3.1",
     "@walletconnect/client": "^1.8.0",
@@ -105,6 +107,7 @@
     "https-browserify": "^1.0.0",
     "jotai": "^1.7.4",
     "js-sha3": "^0.8.0",
+    "long": "^4.0.0",
     "make-plural": "^7.1.0",
     "mitt": "^3.0.0",
     "os-browserify": "^0.3.0",
@@ -124,6 +127,7 @@
     "react-use": "^17.4.0",
     "react-use-wizard": "^2.2.1",
     "readable-stream": "^4.1.0",
+    "semver": "^7.3.8",
     "stable-hash": "^0.0.2",
     "starknet": "^4.9.0",
     "stream-http": "^3.2.0",
