--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
+    "@chain-registry/types": "^0.14.0",
     "@chakra-ui/system": "^2.1.3",
     "@lingui/cli": "^3.14.0",
     "@lingui/core": "^3.13.0",
