Draft support cosmos 13

--- a/package.json
+++ b/package.json
@@ -56,8 +56,11 @@
     "@keplr-wallet/cosmos": "^0.11.38",
     "@keplr-wallet/types": "^0.11.38",
     "@ledgerhq/devices": "^7.0.3",
+    "@ledgerhq/hw-app-btc": "^10.0.0",
     "@ledgerhq/hw-app-cosmos": "^6.27.10",
     "@ledgerhq/hw-app-eth": "^6.29.10",
+    "@ledgerhq/hw-app-polkadot": "^6.27.12",
+    "@ledgerhq/hw-app-solana": "^7.0.6",
     "@ledgerhq/hw-transport-web-ble": "^6.27.6",
     "@ledgerhq/hw-transport-webhid": "^6.27.6",
     "@ledgerhq/logs": "^6.10.1",
