Draft support cosmos 21

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
+PLASMO_PUBLIC_ENABLE_BITCOIN=true
 PLASMO_PUBLIC_ENABLE_COSMOS=true
 PLASMO_PUBLIC_ENABLE_STARKNET=
 PLASMO_PUBLIC_ENABLE_APTOS=true
