--- a/package.json
+++ b/package.json
@@ -77,11 +77,15 @@
     "@tanstack/react-query": "^4.13.5",
     "@tanstack/react-query-persist-client": "^4.0.10",
     "@tanstack/react-virtual": "3.0.0-beta.18",
+    "@toruslabs/openlogin": "^3.2.1",
     "@types/long": "^4.0.2",
     "@uniswap/token-lists": "1.0.0-beta.31",
     "@vespaiach/axios-fetch-adapter": "^0.3.1",
     "@walletconnect/client": "^1.8.0",
     "@walletconnect/web3-provider": "^1.8.0",
+    "@web3auth/base": "^5.1.0",
+    "@web3auth/modal": "^5.1.1",
+    "@web3auth/openlogin-adapter": "^5.1.1",
     "@zxcvbn-ts/core": "^2.0.3",
     "@zxcvbn-ts/language-common": "^2.0.1",
     "@zxcvbn-ts/language-en": "^2.0.1",
@@ -92,6 +96,7 @@
     "assert": "^2.0.0",
     "avvvatars-react": "^0.4.2",
     "axios": "^1.1.2",
+    "bitcoinjs-lib": "^6.1.0",
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
     "cosmjs-types": "^0.6.1",
@@ -100,6 +105,7 @@
     "decimal.js": "^10.4.0",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
+    "ecpair": "^2.1.0",
     "ed25519-hd-key": "^1.2.0",
     "eslint-config-next": "^12.2.1",
     "eslint-config-prettier": "^8.5.0",
@@ -138,10 +144,12 @@
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
     "swr": "^1.3.0",
+    "tiny-secp256k1": "^2.2.1",
     "tweetnacl": "^1.0.3",
     "unique-names-generator": "^4.7.1",
     "url": "^0.11.0",
-    "webextension-polyfill": "^0.9.0"
+    "webextension-polyfill": "^0.9.0",
+    "wif": "^2.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
