--- a/package.json
+++ b/package.json
@@ -153,8 +153,10 @@
     "tweetnacl": "^1.0.3",
     "unique-names-generator": "^4.7.1",
     "url": "^0.11.0",
+    "userop": "^0.2.0",
     "webextension-polyfill": "^0.9.0",
-    "wif": "^2.0.6"
+    "wif": "^2.0.6",
+    "zksync-web3": "^0.14.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
