Draft support erc4337 1

--- a/.env
+++ b/.env
@@ -1,3 +1,14 @@
 PLASMO_PUBLIC_VERSION=1.0.0-beta.4
 PLASMO_PUBLIC_ENABLE_EVM=true
 PLASMO_PUBLIC_WALLET_CONNECT_PROJECT_ID=831ec6e7e2b7e00e09cf0ed3200cd6ce
+
+PLASMO_PUBLIC_ZERODEV_ETHEREUM=
+PLASMO_PUBLIC_ZERODEV_ARBITRUM=
+PLASMO_PUBLIC_ZERODEV_POLYGON=
+PLASMO_PUBLIC_ZERODEV_AVALANCHE=
+PLASMO_PUBLIC_ZERODEV_ETHEREUM_GOERLI=1b0ec24a-15f2-4708-bd35-b9f51a7c59c2
+PLASMO_PUBLIC_ZERODEV_ARBITRUM_GOERLI=2a1c55e6-d094-4c37-9d93-9cbb75fa2271
+PLASMO_PUBLIC_ZERODEV_OPTIMISM_GOERLI=dfdf2cd5-eaea-404b-9fba-250964c047ae
+PLASMO_PUBLIC_ZERODEV_POLYGON_MUMBAI=bfb56ae0-c0fb-4ed8-b216-5304ce2cd35f
+PLASMO_PUBLIC_ZERODEV_AVALANCHE_FUJI=29e1ee38-fe73-45f6-9494-4ef08776e211
+PLASMO_PUBLIC_ZERODEV_BASE_GOERLI=121a6192-8296-4524-b4d1-20efefa109f8
