--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@account-abstraction/sdk": "^0.6.0",
     "@archmagelive/plasmo": "0.56.0",
     "@bitcoinerlab/secp256k1": "^1.0.2",
-    "@chakra-ui/icons": "^2.0.4",
-    "@chakra-ui/react": "^2.2.1",
-    "@chakra-ui/theme-tools": "^2.0.2",
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.7.0",
+    "@chakra-ui/theme-tools": "^2.0.18",
     "@cosmjs/amino": "^0.29.5",
     "@cosmjs/crypto": "^0.29.5",
     "@cosmjs/encoding": "^0.29.5",
@@ -85,6 +85,7 @@
     "@tanstack/react-query-persist-client": "^4.0.10",
     "@tanstack/react-virtual": "3.0.0-beta.18",
     "@toruslabs/openlogin": "^4.5.4",
+    "@toruslabs/openlogin-utils": "^4.5.1",
     "@types/long": "^4.0.2",
     "@uniswap/token-lists": "1.0.0-beta.31",
     "@vespaiach/axios-fetch-adapter": "^0.3.1",
@@ -106,6 +107,7 @@
     "avvvatars-react": "^0.4.2",
     "axios": "^1.1.2",
     "bitcoinjs-lib": "^6.1.0",
+    "browserify-zlib": "^0.2.0",
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
     "coinselect": "^3.1.13",
@@ -167,7 +169,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@chain-registry/types": "^0.14.0",
-    "@chakra-ui/system": "^2.1.3",
+    "@chakra-ui/system": "^2.5.8",
     "@lingui/cli": "^3.14.0",
     "@lingui/core": "^3.14.0",
     "@lingui/macro": "^3.14.0",
@@ -217,7 +219,7 @@
     ]
   },
   "peerDependencies": {
-    "@chakra-ui/system": "^2.1.3",
+    "@chakra-ui/system": "^2.5.8",
     "@lingui/core": "^3.13.0",
     "eslint": ">=7.23.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0"
   },
