--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@web3auth/modal": "^6.0.1",
     "@web3auth/mpc-core-kit": "^0.1.0",
     "@web3auth/openlogin-adapter": "^6.0.1",
+    "@web3auth/ui": "^6.0.1",
     "@zerodevapp/sdk": "^3.1.29",
     "@zxcvbn-ts/core": "^2.0.3",
     "@zxcvbn-ts/language-common": "^2.0.1",
