--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@web3auth/base": "^6.0.1",
     "@web3auth/modal": "^6.0.1",
     "@web3auth/mpc-core-kit": "^0.1.0",
+    "@web3auth/no-modal": "^6.1.1",
     "@web3auth/openlogin-adapter": "^6.0.1",
     "@web3auth/ui": "^6.0.1",
     "@zerodevapp/sdk": "^3.1.29",
