--- a/package.json
+++ b/package.json
@@ -91,12 +91,13 @@
     "@vespaiach/axios-fetch-adapter": "^0.3.1",
     "@walletconnect/client": "^1.8.0",
     "@walletconnect/web3-provider": "^1.8.0",
-    "@web3auth/base": "^6.0.1",
-    "@web3auth/modal": "^6.0.1",
+    "@web3auth/base": "^6.1.1",
+    "@web3auth/base-provider": "^6.1.1",
+    "@web3auth/modal": "^6.1.1",
     "@web3auth/mpc-core-kit": "^0.1.0",
     "@web3auth/no-modal": "^6.1.1",
-    "@web3auth/openlogin-adapter": "^6.0.1",
-    "@web3auth/ui": "^6.0.1",
+    "@web3auth/openlogin-adapter": "^6.1.1",
+    "@web3auth/ui": "^6.1.1",
     "@zerodevapp/sdk": "^3.1.29",
     "@zxcvbn-ts/core": "^2.0.3",
     "@zxcvbn-ts/language-common": "^2.0.1",
