--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "@account-abstraction/sdk": "^0.6.0",
+    "@alchemy/aa-alchemy": "0.1.0-alpha.12",
+    "@alchemy/aa-core": "0.1.0-alpha.11",
+    "@alchemy/aa-ethers": "0.1.0-alpha.11",
     "@archmagelive/plasmo": "0.56.0",
     "@bitcoinerlab/secp256k1": "^1.0.2",
     "@chakra-ui/icons": "^2.0.19",
@@ -165,6 +168,7 @@
     "unique-names-generator": "^4.7.1",
     "url": "^0.11.0",
     "userop": "^0.2.0",
+    "viem": "^1.2.1",
     "webextension-polyfill": "^0.9.0",
     "wif": "^2.0.6",
     "zksync-web3": "^0.14.3"
