--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "@web3auth/no-modal": "^6.1.1",
     "@web3auth/openlogin-adapter": "^6.1.1",
     "@web3auth/ui": "^6.1.1",
-    "@zerodevapp/sdk": "^3.1.29",
+    "@zerodevapp/contracts": "2.0.8",
+    "@zerodevapp/sdk": "^3.1.47",
     "@zxcvbn-ts/core": "^2.0.3",
     "@zxcvbn-ts/language-common": "^2.0.1",
     "@zxcvbn-ts/language-en": "^2.0.1",
