Draft erc4337 account abstraction 4

--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ PLASMO_PUBLIC_ZERODEV_OPTIMISM_GOERLI=dfdf2cd5-eaea-404b-9fba-250964c047ae
 PLASMO_PUBLIC_ZERODEV_POLYGON_MUMBAI=bfb56ae0-c0fb-4ed8-b216-5304ce2cd35f
 PLASMO_PUBLIC_ZERODEV_AVALANCHE_FUJI=29e1ee38-fe73-45f6-9494-4ef08776e211
 PLASMO_PUBLIC_ZERODEV_BASE_GOERLI=121a6192-8296-4524-b4d1-20efefa109f8
+
+PLASMO_PUBLIC_JIFFYSCAN_API_KEY=gFQghtJC6F734nPaUYK8M3ggf9TOpojkbNTH9gR5
