--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ethersproject/bignumber": "^5.6.2",
     "@ethersproject/bytes": "^5.6.1",
     "@ethersproject/constants": "^5.7.0",
+    "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/hash": "^5.7.0",
     "@ethersproject/hdnode": "^5.6.2",
     "@ethersproject/json-wallets": "^5.6.1",
@@ -102,7 +103,7 @@
     "@web3auth/openlogin-adapter": "^6.1.1",
     "@web3auth/ui": "^6.1.1",
     "@zerodevapp/contracts": "2.0.8",
-    "@zerodevapp/sdk": "^3.1.47",
+    "@zerodevapp/sdk": "^3.1.53",
     "@zxcvbn-ts/core": "^2.0.3",
     "@zxcvbn-ts/language-common": "^2.0.1",
     "@zxcvbn-ts/language-en": "^2.0.1",
