--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@tanstack/query-core": "^4.13.4",
     "@tanstack/react-query": "^4.13.5",
     "@tanstack/react-query-persist-client": "^4.0.10",
-    "@tanstack/react-virtual": "3.0.0-beta.18",
+    "@tanstack/react-virtual": "^3.0.0-beta.54",
     "@toruslabs/openlogin": "^4.5.4",
     "@toruslabs/openlogin-utils": "^4.5.1",
     "@types/long": "^4.0.2",
