--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@safe-global/api-kit": "^1.3.0",
     "@safe-global/protocol-kit": "^1.2.0",
     "@safe-global/safe-core-sdk-types": "^2.2.0",
+    "@safe-global/safe-deployments": "^1.26.0",
     "@scure/btc-signer": "^1.0.0",
     "@solana/web3.js": "^1.47.3",
     "@tanstack/query-core": "^4.13.4",
@@ -196,6 +197,7 @@
     "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "18.0.5",
     "@types/react-syntax-highlighter": "^15.5.5",
+    "@types/semver": "^7.5.0",
     "@types/webextension-polyfill": "^0.9.0",
     "@types/wif": "^2.0.2",
     "@walletconnect/types": "1.8.0",
