--- a/package.json
+++ b/package.json
@@ -163,7 +163,7 @@
     "react-use-wizard": "^2.2.1",
     "readable-stream": "^4.1.0",
     "semver": "^7.3.8",
-    "stable-hash": "^0.0.2",
+    "stable-hash": "0.0.3",
     "starknet": "^4.9.0",
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
