--- a/package.json
+++ b/package.json
@@ -165,7 +165,8 @@
     "readable-stream": "^4.1.0",
     "semver": "^7.3.8",
     "stable-hash": "0.0.3",
-    "starknet": "^4.9.0",
+    "starknet": "^5.14.1",
+    "starknet4": "npm:starknet@4.22.0",
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
     "swr": "^1.3.0",
