--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.9",
     "framer-motion": "^7.2.1",
+    "get-starknet-core": "^3.2.0",
     "https-browserify": "^1.0.0",
     "jotai": "^1.7.4",
     "js-sha3": "^0.8.0",
