--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "@moralisweb3/core": "^2.7.0",
     "@moralisweb3/evm-api": "^2.7.0",
     "@moralisweb3/evm-utils": "^2.7.0",
-    "@mysten/sui.js": "^0.14.0",
+    "@mysten/sui.js": "^0.41.1",
+    "@mysten/wallet-standard": "^0.7.1",
     "@noble/hashes": "^1.3.0",
     "@openzeppelin/contracts": "^4.7.3",
     "@plasmohq/storage": "^0.8.1",
