--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@moralisweb3/core": "^2.7.0",
     "@moralisweb3/evm-api": "^2.7.0",
     "@moralisweb3/evm-utils": "^2.7.0",
+    "@mysten/bcs": "^0.7.4",
     "@mysten/sui.js": "^0.41.1",
     "@mysten/wallet-standard": "^0.7.1",
     "@noble/hashes": "^1.3.0",
