--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "starknet4": "npm:starknet@4.22.0",
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
+    "superstruct": "^1.0.3",
     "swr": "^1.3.0",
     "tiny-secp256k1": "^2.2.1",
     "tweetnacl": "^1.0.3",
