--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@mysten/bcs": "^0.7.4",
     "@mysten/sui.js": "^0.41.2",
     "@mysten/wallet-standard": "^0.7.1",
+    "@mysten/zklogin": "^0.1.4",
     "@noble/hashes": "^1.3.0",
     "@openzeppelin/contracts": "^4.7.3",
     "@plasmohq/storage": "^0.8.1",
