Add nft service

--- a/package.json
+++ b/package.json
@@ -70,10 +70,7 @@
     "@ledgerhq/hw-transport-web-ble": "^6.27.6",
     "@ledgerhq/hw-transport-webhid": "^6.27.6",
     "@ledgerhq/logs": "^6.10.1",
-    "@moralisweb3/api-utils": "^2.7.0",
-    "@moralisweb3/core": "^2.7.0",
-    "@moralisweb3/evm-api": "^2.7.0",
-    "@moralisweb3/evm-utils": "^2.7.0",
+    "@moralisweb3/common-evm-utils": "^2.23.1",
     "@mysten/bcs": "^0.7.4",
     "@mysten/sui.js": "^0.41.2",
     "@mysten/wallet-standard": "^0.7.1",
@@ -114,7 +111,7 @@
     "@zxcvbn-ts/language-en": "^2.0.1",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
-    "alchemy-sdk": "^2.2.0",
+    "@archmagelive/alchemy-sdk": "^2.10.1",
     "aptos": "^1.6.0",
     "assert": "^2.0.0",
     "avvvatars-react": "^0.4.2",
@@ -147,6 +144,7 @@
     "long": "^4.0.0",
     "make-plural": "^7.1.0",
     "mitt": "^3.0.0",
+    "moralis": "^2.23.1",
     "os-browserify": "^0.3.0",
     "osmojs": "14.0.0-rc.0",
     "overlayscrollbars": "^2.1.0",
@@ -243,22 +241,24 @@
     "@lingui/core": "^3.13.0",
     "eslint": ">=7.23.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0"
   },
-  "resolutions": {
-    "axios": "0.27.2",
-    "@parcel/source-map": "2.1.0",
-    "libsodium": "file:./resolutions/noop",
-    "libsodium-wrappers": "file:./resolutions/noop",
-    "readable-stream": "^4.1.0",
-    "@cosmjs/crypto": "file:./resolutions/@cosmjs/crypto",
-    "randombytes": "file:./resolutions/randombytes",
-    "pbkdf2": "file:./resolutions/pbkdf2",
-    "randomfill": "file:./resolutions/randomfill",
-    "@cosmjs/amino": "^0.29.5",
-    "@cosmjs/encoding": "^0.29.5",
-    "@cosmjs/proto-signing": "^0.29.5",
-    "@cosmjs/stargate": "^0.29.5",
-    "@cosmjs/tendermint-rpc": "^0.29.5",
-    "@noble/hashes": "file:./resolutions/@noble/hashes"
+  "pnpm": {
+    "overrides": {
+      "axios": "0.27.2",
+      "@parcel/source-map": "2.1.0",
+      "libsodium": "file:./resolutions/noop",
+      "libsodium-wrappers": "file:./resolutions/noop",
+      "readable-stream": "^4.1.0",
+      "@cosmjs/crypto": "file:./resolutions/@cosmjs/crypto",
+      "randombytes": "file:./resolutions/randombytes",
+      "pbkdf2": "file:./resolutions/pbkdf2",
+      "randomfill": "file:./resolutions/randomfill",
+      "@cosmjs/amino": "^0.29.5",
+      "@cosmjs/encoding": "^0.29.5",
+      "@cosmjs/proto-signing": "^0.29.5",
+      "@cosmjs/stargate": "^0.29.5",
+      "@cosmjs/tendermint-rpc": "^0.29.5",
+      "@noble/hashes": "file:./resolutions/@noble/hashes"
+    }
   },
   "alias": {
     "stream": "./resolutions/stream.js"
