--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@alchemy/aa-alchemy": "0.1.0-alpha.12",
     "@alchemy/aa-core": "0.1.0-alpha.11",
     "@alchemy/aa-ethers": "0.1.0-alpha.11",
+    "@archmagelive/alchemy-sdk": "^2.10.1",
     "@archmagelive/plasmo": "0.56.0",
     "@bitcoinerlab/secp256k1": "^1.0.2",
     "@chakra-ui/icons": "^2.0.19",
@@ -111,7 +112,6 @@
     "@zxcvbn-ts/language-en": "^2.0.1",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
-    "@archmagelive/alchemy-sdk": "^2.10.1",
     "aptos": "^1.6.0",
     "assert": "^2.0.0",
     "avvvatars-react": "^0.4.2",
@@ -157,6 +157,7 @@
     "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
     "react-json-view": "^1.21.3",
+    "react-markdown": "^8.0.7",
     "react-qr-reader": "3.0.0-beta-1",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.4.0",
