--- a/.env
+++ b/.env
@@ -18,3 +18,8 @@ PLASMO_PUBLIC_ZERODEV_AVALANCHE_FUJI=29e1ee38-fe73-45f6-9494-4ef08776e211
 PLASMO_PUBLIC_ZERODEV_BASE_GOERLI=121a6192-8296-4524-b4d1-20efefa109f8
 
 PLASMO_PUBLIC_JIFFYSCAN_API_KEY=gFQghtJC6F734nPaUYK8M3ggf9TOpojkbNTH9gR5
+
+PLASMO_PUBLIC_ALCHEMY_API_KEY_ETHEREUM=yEyZhVBQjV9iFIYcfJXmiqvBSyhnf39C
+PLASMO_PUBLIC_ALCHEMY_API_KEY_ARBITRUM=B7lhaYAjsfDGUGyhkq5ny6U3pKIaInoT
+PLASMO_PUBLIC_ALCHEMY_API_KEY_OPTIMISM=WU7Y99nedq_u5SAjIPoujRTCq0MgEEWR
+PLASMO_PUBLIC_ALCHEMY_API_KEY_POLYGON=uXq5-6yHRic0XntRFs_aqM7jYh1tPUok
