Add aleo network

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,4 @@ PLASMO_PUBLIC_ENABLE_STARKNET=true
 PLASMO_PUBLIC_ENABLE_APTOS=true
 PLASMO_PUBLIC_ENABLE_SUI=true
 PLASMO_PUBLIC_ENABLE_SOLANA=
+PLASMO_PUBLIC_ENABLE_ALEO=true
