--- a/package.json
+++ b/package.json
@@ -96,6 +96,8 @@
     "@tanstack/react-virtual": "^3.0.0-beta.54",
     "@toruslabs/openlogin": "^4.5.4",
     "@toruslabs/openlogin-utils": "^4.5.1",
+    "@trezor/connect-plugin-ethereum": "^9.0.2",
+    "@trezor/connect-web": "^9.1.4",
     "@types/long": "^4.0.2",
     "@uniswap/token-lists": "1.0.0-beta.31",
     "@vespaiach/axios-fetch-adapter": "^0.3.1",
