Add tenderly api

--- a/.env
+++ b/.env
@@ -23,3 +23,7 @@ PLASMO_PUBLIC_ALCHEMY_API_KEY_ETHEREUM=yEyZhVBQjV9iFIYcfJXmiqvBSyhnf39C
 PLASMO_PUBLIC_ALCHEMY_API_KEY_ARBITRUM=B7lhaYAjsfDGUGyhkq5ny6U3pKIaInoT
 PLASMO_PUBLIC_ALCHEMY_API_KEY_OPTIMISM=WU7Y99nedq_u5SAjIPoujRTCq0MgEEWR
 PLASMO_PUBLIC_ALCHEMY_API_KEY_POLYGON=uXq5-6yHRic0XntRFs_aqM7jYh1tPUok
+
+PLASMO_PUBLIC_TENDERLY_ACCOUNT_NAME=archmage-live
+PLASMO_PUBLIC_TENDERLY_PROJECT_NAME=archmage
+PLASMO_PUBLIC_TENDERLY_ACCESS_KEY=3XYvGtjMRhEgjRfRl1FB9Y
