--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@tanstack/react-query": "^4.13.5",
     "@tanstack/react-query-persist-client": "^4.0.10",
     "@tanstack/react-virtual": "^3.0.0-beta.54",
+    "@tenderly/sdk": "^0.2.1",
     "@toruslabs/openlogin": "^4.5.4",
     "@toruslabs/openlogin-utils": "^4.5.1",
     "@trezor/connect-plugin-ethereum": "^9.0.2",
