--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eth-balance-checker": "^0.2.0",
     "eth-rpc-errors": "^4.0.3",
+    "ethereum-multicall": "^2.21.0",
     "ethers": "^5.6.9",
     "framer-motion": "^7.2.1",
     "get-starknet-core": "^3.2.0",
