Add solana network and injection

--- a/package.json
+++ b/package.json
@@ -89,7 +89,10 @@
     "@safe-global/safe-core-sdk-types": "^2.2.0",
     "@safe-global/safe-deployments": "^1.26.0",
     "@scure/btc-signer": "^1.0.0",
-    "@solana/web3.js": "^1.47.3",
+    "@solana/spl-token": "^0.3.11",
+    "@solana/wallet-standard-features": "^1.2.0",
+    "@solana/web3.js": "2.0.0-experimental.dbe6a73",
+    "@solana/web3.js-legacy-sham": "1.0.0-experimental.dbe6a73",
     "@tanstack/query-core": "^4.13.4",
     "@tanstack/react-query": "^4.13.5",
     "@tanstack/react-query-persist-client": "^4.0.10",
@@ -102,6 +105,9 @@
     "@types/long": "^4.0.2",
     "@uniswap/token-lists": "1.0.0-beta.31",
     "@vespaiach/axios-fetch-adapter": "^0.3.1",
+    "@wallet-standard/base": "^1.0.1",
+    "@wallet-standard/features": "^1.0.3",
+    "@wallet-standard/wallet": "^1.0.1",
     "@walletconnect/client": "^1.8.0",
     "@walletconnect/sign-client": "^2.9.2",
     "@walletconnect/web3-provider": "^1.8.0",
