Add solana provider

--- a/package.json
+++ b/package.json
@@ -91,8 +91,7 @@
     "@scure/btc-signer": "^1.0.0",
     "@solana/spl-token": "^0.3.11",
     "@solana/wallet-standard-features": "^1.2.0",
-    "@solana/web3.js": "2.0.0-experimental.dbe6a73",
-    "@solana/web3.js-legacy-sham": "1.0.0-experimental.dbe6a73",
+    "@solana/web3.js": "^1.89.1",
     "@tanstack/query-core": "^4.13.4",
     "@tanstack/react-query": "^4.13.5",
     "@tanstack/react-query-persist-client": "^4.0.10",
