Add solana permissionedProvider

--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@scure/btc-signer": "^1.0.0",
     "@solana/spl-token": "^0.3.11",
     "@solana/wallet-standard-features": "^1.2.0",
+    "@solana/wallet-standard-util": "^1.1.1",
     "@solana/web3.js": "^1.89.1",
     "@tanstack/query-core": "^4.13.4",
     "@tanstack/react-query": "^4.13.5",
