--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "eslint-config-next": "^12.2.1",
     "eslint-config-prettier": "^8.5.0",
     "eth-balance-checker": "^0.2.0",
+    "eth-phishing-detect": "^1.2.0",
     "eth-rpc-errors": "^4.0.3",
     "ethereum-multicall": "^2.21.0",
     "ethers": "^5.6.9",
@@ -196,6 +197,7 @@
     "viem": "^1.2.1",
     "webextension-polyfill": "^0.9.0",
     "wif": "^2.0.6",
+    "yaml": "^2.3.4",
     "zksync-web3": "^0.14.3"
   },
   "devDependencies": {
