--- a/package.json
+++ b/package.json
@@ -194,6 +194,7 @@
     "unique-names-generator": "^4.7.1",
     "url": "^0.11.0",
     "userop": "^0.2.0",
+    "uuid": "^9.0.1",
     "viem": "^1.2.1",
     "webextension-polyfill": "^0.9.0",
     "wif": "^2.0.6",
